feat(collections): Collections table Rename the example table to CollectionsTable. Adjust Collection model.
